syntax = "proto3";

package auth;
option go_package= "auth";

service AuthServer {
  rpc Login (LoginReq) returns (LoginResp) {}
}

message LoginReq {
  string UserName = 1;
  string Password = 2;
}

message LoginResp {
  string Token = 1;
}
